--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Lacquer&family=Mountains+of+Christmas:wght@400;700&display=swap"
     rel="stylesheet">
   <title>graceis.online</title>
 </head>
